# Ticket-Management-System

./: README.md  datascript.py  pyproject.toml  pytest.ini
account/: admin.py  enums.py  models.py  permissions.py  validators.py
account/api/: serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_user_is_active_alter_user_phone_number.py  0003_permission_role_rolepermission_userrole.py  0004_user_role_delete_userrole.py  0005_role_permissions_delete_rolepermission.py  0006_user_assigned_menus.py
menu/: admin.py  models.py
menu/api/: serializers.py  urls.py  views.py
menu/migrations/: 0001_initial.py
ticket/: admin.py  models.py  signals.py  tests.py  utils.py
ticket/api/: serializers.py  urls.py  views.py
ticket/migrations/: 0001_initial.py  0002_alter_ticket_menu.py  0003_remove_ticket_menu_ticket_menu.py  0004_ticket_updated_at.py  0005_ticket_assigned_to.py
ticket_management/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
